--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,13 @@
 <resources>
-    <string name="app_name">Order 1.6</string>
+    <string name="app_name">Order 1.7</string>
     <string name="action_settings">Settings</string>
     <string name="action_quit">Quit-discard</string>
     <string name="action_exit">Save and Exit</string>
     <string name="action_break">Break</string>
     <string name="action_net">Net Op</string>
     <string name="action_about">About</string>
-    <string name="about_display_duration">500</string>
-    <string name="about_text">Written by Cris Graue                   2018 All Rights Reserved</string>
+    <string name="about_display_duration">1</string>
+    <string name="about_text">Written by Cris Graue 2018 All Rights Reserved</string>
     <string name="file">File</string>
     <string name="file_add">Add file</string>
     <string name="file_save">Save</string>
@@ -25,9 +25,11 @@
     <string name="dialog_yea">yea</string>
     <string name="dialog_nea">nea</string>
     <string name="main_file">MBMtable.txt</string>
-    <string name="add_file">MBMadd</string>
+    <string name="add_file">MBMadd.txt</string>
     <string name="csv_file">MBMcsv.csv</string>
     <string name="backup_file">MBMback_</string>
     <string name="import_file">MBMimport.txt</string>
+    <string name="ok">OK</string>
+    <string name="upb">up</string>
+    <string name="downb">down</string>
 </resources>
-
